Full migration from Springboot to Quarkus
Almost everything working, including native image generation.
Need to fix --dryRun